refactor[student]: use Strategy in UpdateStudentByID route (#26)
